# pylint-exception-var-name-plugin

./: .pylintrc  LICENSE  README.md  pylint.yml  pyproject.toml
.github/workflows/: pylint.yml
plugin/: checker.py  exception_var_name.py
pylint_exception_var_name_plugin/: __init__.py  checker.py  exception_var_name.py
tests/: test_plugin.py
