[tool.poetry]
name = "pylint-exception-var-name-plugin"
version = "0.1.0"
description = ""
authors = ["Konstantin Shestakov <winmasta@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pylint = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
